# patchpatrol

./: .gitignore  .pre-commit-hooks.yaml  LICENSE  README.md  main.py  prompt.md  pyproject.toml  tox.ini
.github/workflows/: test.yml
patchpatrol/: __init__.py  cli.py  models.py  prompts.py
patchpatrol/backends/: __init__.py  base.py  gemini_backend.py  llama_backend.py  onnx_backend.py
patchpatrol/utils/: __init__.py  git_utils.py  parsing.py
tests/unit/: test_backends.py  test_cli.py  test_git_utils.py  test_parsing.py
